# databricks-lakehouse-usefull-miletto

./: pyproject.toml
databricks_usefull_miletto/delta_lake/autoloader/: schema_builder.py
databricks_usefull_miletto/delta_lake/maitenance/: dedup_delta_tables.py  dedup_delta_tables_notebook.py  optimize_tables_notebook.py  optmizewrite_tables_notebook.py  vaccum_notebook.py
databricks_usefull_miletto/domain/: metadata_class.py
databricks_usefull_miletto/infra/config/: settings.py
