[tool.poetry]
name = "databricks-usefull-miletto"
version = "0.1.0"
description = ""
authors = ["Thales da Mileto <88147489+thalesdamileto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
